# NGMP-Server

./: Cargo.toml  server_config.toml
plugins/example/: main.lua
src/: config.rs  http.rs  logger.rs  main.rs  plugin.rs  server.rs
