[package]
name = "ngmp_server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
log = { version = "0.4", features = ["std"] }
tokio = { version = "1.40", features = [
    "macros",
    "sync",
    "rt-multi-thread",
    "rt",
    "net",
    "time",
] }
ngmp_protocol_impl = { path = "../SL-Protocol-impl" }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
toml = { version = "0.8", features = ["preserve_order"] }

# HTTP server
warp = "0.3.7"
reqwest = { version = "0.12.5", features = [
    "json",
] } # We must use this version because of steam-auth (for now)

# Authentication
steam-auth = { git = "https://github.com/BeamNG-NGMP/steam-auth.git" }

# Plugin system
mlua = { version = "0.10", features = ["luajit", "async", "vendored"] }
